added text and images

--- a/index.html
+++ b/index.html
@@ -1,8 +1,43 @@
 <!DOCTYPE html>
 <html>
-   <head>
-   </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+
+<head>
+   <title>Fertile Land Garden</title>
+</head>
+
+<body>
+   <h1 id="Title">Welcome To The Sacred Garden</h1><br>
+   <h2>Fertile Land Garden</h2><br><br>
+   <img src="IMG_8873.JPG">
+
+   <p>Fertile Land Garden was founded on Feburary 25, 2022.
+      The purpose of the organization is to provide holistic alternatives for the
+      community to encourage self empowerment, self sustainabilty, and self determination.
+      The garden was founded by Tara Blanchard and Tiara Burtin, two herbalist and
+      medicine women. The mission of Fertile Land is to teach the community through
+      womb wellness ceremonies, ancestral veneration, and somatic practices.<br><br>
+
+      In the last year, the organization spent time developing the garden by having
+      garden beds built through the construction class at North County Technical Highchool.
+      The garden hosted community service projects, yoga classes, and extended a gardening
+      class for middle school girls.<br><br>
+
+      <img src = "IMG_2679.JPG">
+
+      The inspiration for the project was a result of the growing food deserts in
+      St. Louis, Missouri. Aside from low access to food, community members did not have
+      access to stress management resources or alternative healing remedies.
+      <a
+         href="https://healthequityworks.wustl.edu/items/for-the-sake-of-all-a-report-on-the-health-and-well-being-of-african-americans-in-st-louis-and-why-it-matters-for-everyone/">
+         <em>For The Sake Of All</em></a>, a study done by Washington University in St. Louis,
+      showed that most deaths in the Black population in St. Louis where a result of
+      food access, stress related disorders, and lack of exercises. <br><br>
+
+      Fertile Land Garden is a response to the needs of the community. Folks should not
+      have to travel outside of their community to reach resources needed to live, thrive,
+      and grow.<br><br>
+
+     
+</body>
+
 </html>
