linked CSS to HTML and aligned image

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+   <link rel="stylesheet" href="styles.css">
    <title>Fertile Land Garden</title>
 </head>
 
@@ -22,7 +23,6 @@
       The garden hosted community service projects, yoga classes, and extended a gardening
       class for middle school girls.<br><br>
 
-      <img src = "IMG_2679.JPG">
 
       The inspiration for the project was a result of the growing food deserts in
       St. Louis, Missouri. Aside from low access to food, community members did not have
