--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       Fertile Land Garden is a response to the needs of the community. Folks should not
       have to travel outside of their community to reach resources needed to live, thrive,
-      and grow.<br><br>
+      and grow.<br><br></p>
 
      
 </body>
